Finalización de las paginas planas del proyecto

--- a/CraftGoldMan/templates/layouts/parcials/menu.html
+++ b/CraftGoldMan/templates/layouts/parcials/menu.html
@@ -12,13 +12,13 @@
     </font>
   </a>
 
-  <a href="nuestra_mision.php" class="ui black basic button large">
+  <a href="{% url 'mision' %}" class="ui black basic button large">
     <font style="vertical-align: inherit;">
       <font style="vertical-align: inherit;">Nuestra misión</font>
     </font>
   </a>
 
-  <a href="politicas_tienda.php" class="ui black basic button large">
+  <a href="{% url 'politicas' %}" class="ui black basic button large">
     <font style="vertical-align: inherit;">
       <font style="vertical-align: inherit;">Políticas de la tienda</font>
     </font>
