sistema de registro funcional

--- a/CraftGoldMan/templates/layouts/base.html
+++ b/CraftGoldMan/templates/layouts/base.html
@@ -3,6 +3,21 @@
 <html lang="en">
 
 <head>
+  <style>
+    .buycar-left .img-buycar{
+      width: 50px !important;
+      height: 50px !important;
+    }
+    div.item.resize{
+      display: flex !important;
+      flex-wrap: nowrap;
+      justify-content: space-around;
+    }
+    .buycar-right {
+      display:flex;
+      flex-direction: column;
+    }
+  </style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}{% endblock title %}</title>
