--- a/CraftGoldMan/templates/layouts/parcials/menu.html
+++ b/CraftGoldMan/templates/layouts/parcials/menu.html
@@ -25,7 +25,7 @@
   <div class="buycar">
     <div class="ui icon top left pointing dropdown button" style="background-color: transparent!important">
       <i class="shopping cart icon"></i>
-      <div class="menu">
+      <div class="menu" style="min-width: 280px;">
         <div class="item resize">
           <div class="buycar-left">
             <img class="img-buycar" src="{% static 'img/mision_tienda/motivar.png' %}" alt="">
@@ -75,6 +75,10 @@
             <span>Descripcion producto</span>
             <span>precio producto</span>
           </div>
+        </div>
+
+        <div class="item resize active selected">
+          Aqui va el ver mas
         </div>
       </div>
     </div>
