--- a/CraftGoldMan/templates/autenticacion.html
+++ b/CraftGoldMan/templates/autenticacion.html
@@ -7,17 +7,35 @@
 <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
 {% endblock style %}
 {% block main %}
+{% for message in messages %}
+    {% if message.tags == 'success' %}
+        <div class="ui success message">
+            <i class="close icon"></i>
+            <div class="header">
+                {{ message }}
+            </div>
+        </div>
+    {% elif message.tags == 'error' %}
+        <div class="ui negative message">
+            <i class="close icon"></i>
+            <div class="header">
+                {{ message }}
+            </div>
+        </div>
+    {% endif %}
+{% endfor %}	
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
-	<form action="insert_user.php" method="POST">
+	<form action="/registro/" method="POST">
+		{% csrf_token %}
 			<h1>Crear una cuenta</h1>
-            <input type="text" name="name" placeholder="Nombre">
-            <input type="text" name="lastname" placeholder="Apellidos">
-            <input type="text" name="username" placeholder="Nombre de Usuario">
-            <input type="text" name="phone" placeholder="Telefono">
-            <input type="password" name="password" placeholder="Contraseña">
-            <input type="email" name="email" placeholder="Correo Electronico">
-            <button>RegistrarseS</button>
+            <input type="text" required name="first_name" placeholder="Nombre">
+            <input type="text" required name="last_name" placeholder="Apellidos">
+            <input type="text" required name="username" placeholder="Nombre de Usuario">
+            <input type="text" required name="phone" placeholder="Telefono">
+            <input type="password" required name="password" placeholder="Contraseña">
+            <input type="email" required name="email" placeholder="Correo Electronico">
+            <button>Registrarse</button>
 	</form>
 	</div>
 	<div class="form-container sign-in-container">
