--- a/CraftGoldMan/templates/autenticacion.html
+++ b/CraftGoldMan/templates/autenticacion.html
@@ -39,9 +39,9 @@
 	</form>
 	</div>
 	<div class="form-container sign-in-container">
-		<form action="login_usuario.php" method="POST">
+		<form method="POST">
+			{% csrf_token %}
 			<h1>Iniciar sesión</h1>
-			<span>o usa tu cuenta</span>
 			<input type="email" name="email" placeholder="Correo Electronico"/>
 			<input type="password" name="password" placeholder="Contraseña"/>
 			<a href="#">¿Olvidaste tu contraseña?</a>
