--- a/CraftGoldMan/templates/admin/layouts/parcials/menu.html
+++ b/CraftGoldMan/templates/admin/layouts/parcials/menu.html
@@ -8,7 +8,7 @@
     <a class="active item" href="{% url 'admin:categoriaR' %}">
       Categoria
     </a>
-    <a class="item">
+    <a class="item" href="{% url 'admin:subcategoriaR' %}">
       Subcategoria
     </a>
     <a class="item">
