Interfaz del CRUD de productos ista

--- a/CraftGoldMan/templates/admin/categoriaR.html
+++ b/CraftGoldMan/templates/admin/categoriaR.html
@@ -1,9 +1,9 @@
 {% extends "admin/layouts/base.html" %}
 {% load static %}
-{% block title %}Categoria Create{% endblock title %}
+{% block title %}Categoria Lista{% endblock title %}
 {% block main %}
 <i class="bars icon"></i>
-<h1 style="font-size: 50px;">Creacion de Categoria</h1>
+<h1 style="font-size: 50px;">Ver lista de Categoria</h1>
 <div style="width: 100%;display: flex;flex-direction: column;align-content: center;">
   <table class="ui inverted yellow table">
     <thead>
