--- a/CraftGoldMan/templates/admin/layouts/parcials/menu.html
+++ b/CraftGoldMan/templates/admin/layouts/parcials/menu.html
@@ -11,16 +11,16 @@
     <a class="item" href="{% url 'admin:subcategoriaR' %}">
       Subcategoria
     </a>
-    <a class="item">
+    <a class="item" href="{% url 'admin:productoR' %}">
       Producto
     </a>
-    <a class="item">
+    <a class="item" href="{% url 'index' %}">
       Inicio
     </a>
   </div>
   <div></div>
   <div>
-    <a class="item">
+    <a class="item" href="{% url 'logout' %}">
       Cerrar Sesion
     </a>
   </div>
